# capabilitymesh

./: .gitignore  CONTRIBUTING.md  DISCOVERY_ARCHITECTURE.md  EXAMPLES_GUIDE.md  LICENSE  MANIFEST.in  NOTICE  README.md  README_PYPI.md  ROADMAP.md  pyproject.toml
capabilitymesh/: __init__.py  mesh.py
capabilitymesh/core/: __init__.py  exceptions.py  identity.py  types.py
capabilitymesh/discovery/: __init__.py
capabilitymesh/embeddings/: __init__.py  base.py  keyword.py  local.py  openai.py
capabilitymesh/integrations/: __init__.py  autogen.py  base.py  crewai.py  langgraph.py
capabilitymesh/integrations/a2a/: __init__.py  adapter.py  client.py  converter.py
capabilitymesh/negotiation/: __init__.py
capabilitymesh/schemas/: __init__.py  capability.py
capabilitymesh/storage/: __init__.py  base.py  memory.py  redis.py  sqlite.py
capabilitymesh/trust/: __init__.py  simple.py
docs/: technical_documentation.html
examples/: 01_basic_usage.py  02_storage_backends.py  03_trust_management.py  04_semantic_search.py  05_advanced_capabilities.py  06_multi_agent_workflow.py  README.md  basic_capability.py  capabilitymesh_example.db  framework_integrations.py  quickstart.py  real_world_integrations.py  semantic_search.py
tests/: __init__.py
tests/integration/: __init__.py  test_a2a_integration.py  test_autogen_integration.py  test_crewai_integration.py  test_langgraph_integration.py
tests/unit/: __init__.py  test_a2a_client.py  test_capability.py  test_embeddings.py  test_exceptions.py  test_identity.py  test_local_embedder.py  test_mesh.py  test_openai_embedder.py  test_redis_storage.py  test_sqlite_storage.py  test_storage.py  test_trust.py
